{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 116,
  "lineage": "d8623834-4a01-f1a4-7085-99fe504d45c2",
  "resources": [
    {
      "module": "module.ec2_module",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-084568db4383264d4",
            "arn": "arn:aws:ec2:us-east-1:047719643172:instance/i-0ed6e2cc937460b83",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ed6e2cc937460b83",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Task2-key-Virginia",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a5d0766329ec9351",
            "private_dns": "ip-10-0-1-193.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.193",
            "public_ip": "54.166.236.219",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b408b540d111e43d",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0634ea02bd4a50822",
            "tags": {
              "Name": "Bastion_host"
            },
            "tags_all": {
              "Name": "Bastion_host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08a40fca6110ffa86"
            ]
          },
          "dependencies": [
            "module.vpc_module.aws_security_group.public_sg",
            "module.vpc_module.aws_subnet.public_subnet",
            "module.vpc_module.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_module",
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-084568db4383264d4",
            "arn": "arn:aws:ec2:us-east-1:047719643172:instance/i-098136491924cdf8d",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-098136491924cdf8d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Task2-key-Virginia",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-011b9fd6d163d1921",
            "private_dns": "ip-10-0-3-221.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.221",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-00b2f46c1a85235f7",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-057f316e3290d2260",
            "tags": {
              "Name": "private_host"
            },
            "tags_all": {
              "Name": "private_host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f0d7e78803f90316"
            ]
          },
          "dependencies": [
            "module.vpc_module.aws_security_group.private_sg",
            "module.vpc_module.aws_subnet.private_subnet",
            "module.vpc_module.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0182f31765b1b1814",
            "arn": "arn:aws:ec2:us-east-1:047719643172:elastic-ip/eipalloc-0182f31765b1b1814",
            "association_id": "eipassoc-091b0cfb72b64ea2f",
            "domain": "vpc",
            "id": "eipalloc-0182f31765b1b1814",
            "network_border_group": "us-east-1",
            "network_interface": "eni-09062cc419859f346",
            "private_dns": "ip-10-0-1-247.ec2.internal",
            "private_ip": "10.0.1.247",
            "public_dns": "ec2-44-196-85-253.compute-1.amazonaws.com",
            "public_ip": "44.196.85.253",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat_eip-us-east-1a"
            },
            "tags_all": {
              "Name": "nat_eip-us-east-1a"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e31c62f1b9136fbc",
            "arn": "arn:aws:ec2:us-east-1:047719643172:elastic-ip/eipalloc-0e31c62f1b9136fbc",
            "association_id": "eipassoc-0dcfc27d820bab3f5",
            "domain": "vpc",
            "id": "eipalloc-0e31c62f1b9136fbc",
            "network_border_group": "us-east-1",
            "network_interface": "eni-015678e7f875c1d9c",
            "private_dns": "ip-10-0-2-122.ec2.internal",
            "private_ip": "10.0.2.122",
            "public_dns": "ec2-13-218-253-238.compute-1.amazonaws.com",
            "public_ip": "13.218.253.238",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat_eip-us-east-1b"
            },
            "tags_all": {
              "Name": "nat_eip-us-east-1b"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:047719643172:internet-gateway/igw-0a28c13414c0a0573",
            "id": "igw-0a28c13414c0a0573",
            "owner_id": "047719643172",
            "tags": {
              "Name": "My_IGW_Terraform"
            },
            "tags_all": {
              "Name": "My_IGW_Terraform"
            },
            "vpc_id": "vpc-000b6a43f790e2f2c"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "my_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0182f31765b1b1814",
            "association_id": "eipassoc-091b0cfb72b64ea2f",
            "connectivity_type": "public",
            "id": "nat-0f81a540002606f87",
            "network_interface_id": "eni-09062cc419859f346",
            "private_ip": "10.0.1.247",
            "public_ip": "44.196.85.253",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0634ea02bd4a50822",
            "tags": {
              "Name": "nat_gw-us-east-1a"
            },
            "tags_all": {
              "Name": "nat_gw-us-east-1a"
            }
          },
          "dependencies": [
            "module.vpc_module.aws_eip.nat_eip",
            "module.vpc_module.aws_internet_gateway.my_igw",
            "module.vpc_module.aws_subnet.public_subnet",
            "module.vpc_module.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e31c62f1b9136fbc",
            "association_id": "eipassoc-0dcfc27d820bab3f5",
            "connectivity_type": "public",
            "id": "nat-0ede1ec9d684485ce",
            "network_interface_id": "eni-015678e7f875c1d9c",
            "private_ip": "10.0.2.122",
            "public_ip": "13.218.253.238",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-06fda999af8f33c34",
            "tags": {
              "Name": "nat_gw-us-east-1b"
            },
            "tags_all": {
              "Name": "nat_gw-us-east-1b"
            }
          },
          "dependencies": [
            "module.vpc_module.aws_eip.nat_eip",
            "module.vpc_module.aws_internet_gateway.my_igw",
            "module.vpc_module.aws_subnet.public_subnet",
            "module.vpc_module.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:047719643172:route-table/rtb-07d8e71b0080cf947",
            "id": "rtb-07d8e71b0080cf947",
            "owner_id": "047719643172",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f81a540002606f87",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_rt-us-east-1a"
            },
            "tags_all": {
              "Name": "private_rt-us-east-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-000b6a43f790e2f2c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_module.aws_eip.nat_eip",
            "module.vpc_module.aws_internet_gateway.my_igw",
            "module.vpc_module.aws_nat_gateway.my_nat_gateway",
            "module.vpc_module.aws_subnet.public_subnet",
            "module.vpc_module.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:047719643172:route-table/rtb-085a4cadfffd0e897",
            "id": "rtb-085a4cadfffd0e897",
            "owner_id": "047719643172",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ede1ec9d684485ce",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_rt-us-east-1b"
            },
            "tags_all": {
              "Name": "private_rt-us-east-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-000b6a43f790e2f2c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_module.aws_eip.nat_eip",
            "module.vpc_module.aws_internet_gateway.my_igw",
            "module.vpc_module.aws_nat_gateway.my_nat_gateway",
            "module.vpc_module.aws_subnet.public_subnet",
            "module.vpc_module.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:047719643172:route-table/rtb-0db30338436f54b62",
            "id": "rtb-0db30338436f54b62",
            "owner_id": "047719643172",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a28c13414c0a0573",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_rt-us-east-1a"
            },
            "tags_all": {
              "Name": "public_rt-us-east-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-000b6a43f790e2f2c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_module.aws_internet_gateway.my_igw",
            "module.vpc_module.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:047719643172:route-table/rtb-04406fd2c230fd11c",
            "id": "rtb-04406fd2c230fd11c",
            "owner_id": "047719643172",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a28c13414c0a0573",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_rt-us-east-1b"
            },
            "tags_all": {
              "Name": "public_rt-us-east-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-000b6a43f790e2f2c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_module.aws_internet_gateway.my_igw",
            "module.vpc_module.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03deca8005aec8d22",
            "route_table_id": "rtb-07d8e71b0080cf947",
            "subnet_id": "subnet-057f316e3290d2260"
          },
          "dependencies": [
            "module.vpc_module.aws_eip.nat_eip",
            "module.vpc_module.aws_internet_gateway.my_igw",
            "module.vpc_module.aws_nat_gateway.my_nat_gateway",
            "module.vpc_module.aws_route_table.private_route_table",
            "module.vpc_module.aws_subnet.private_subnet",
            "module.vpc_module.aws_subnet.public_subnet",
            "module.vpc_module.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08120bb14d1d73ace",
            "route_table_id": "rtb-085a4cadfffd0e897",
            "subnet_id": "subnet-06e10b10794a31008"
          },
          "dependencies": [
            "module.vpc_module.aws_eip.nat_eip",
            "module.vpc_module.aws_internet_gateway.my_igw",
            "module.vpc_module.aws_nat_gateway.my_nat_gateway",
            "module.vpc_module.aws_route_table.private_route_table",
            "module.vpc_module.aws_subnet.private_subnet",
            "module.vpc_module.aws_subnet.public_subnet",
            "module.vpc_module.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01797d1bb7b12259e",
            "route_table_id": "rtb-0db30338436f54b62",
            "subnet_id": "subnet-0634ea02bd4a50822"
          },
          "dependencies": [
            "module.vpc_module.aws_internet_gateway.my_igw",
            "module.vpc_module.aws_route_table.public_route_table",
            "module.vpc_module.aws_subnet.public_subnet",
            "module.vpc_module.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01d0a61c186a41452",
            "route_table_id": "rtb-04406fd2c230fd11c",
            "subnet_id": "subnet-06fda999af8f33c34"
          },
          "dependencies": [
            "module.vpc_module.aws_internet_gateway.my_igw",
            "module.vpc_module.aws_route_table.public_route_table",
            "module.vpc_module.aws_subnet.public_subnet",
            "module.vpc_module.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:047719643172:security-group/sg-0f0d7e78803f90316",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f0d7e78803f90316",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20250412124403661300000001",
            "name_prefix": "terraform-",
            "owner_id": "047719643172",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "private_sg"
            },
            "tags_all": {
              "Name": "private_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-000b6a43f790e2f2c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_module.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:047719643172:security-group/sg-08a40fca6110ffa86",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08a40fca6110ffa86",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20250412124403666800000002",
            "name_prefix": "terraform-",
            "owner_id": "047719643172",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "public_sg"
            },
            "tags_all": {
              "Name": "public_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-000b6a43f790e2f2c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_module.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:047719643172:subnet/subnet-04cdf287217d0f8f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04cdf287217d0f8f1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "047719643172",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "db_subnet-us-east-1a"
            },
            "tags_all": {
              "Name": "db_subnet-us-east-1a"
            },
            "vpc_id": "vpc-000b6a43f790e2f2c"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:047719643172:subnet/subnet-060149cfbe565b1b2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-060149cfbe565b1b2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "047719643172",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "db_subnet-us-east-1b"
            },
            "tags_all": {
              "Name": "db_subnet-us-east-1b"
            },
            "vpc_id": "vpc-000b6a43f790e2f2c"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:047719643172:subnet/subnet-057f316e3290d2260",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-057f316e3290d2260",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "047719643172",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet"
            },
            "tags_all": {
              "Name": "private_subnet"
            },
            "vpc_id": "vpc-000b6a43f790e2f2c"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:047719643172:subnet/subnet-06e10b10794a31008",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06e10b10794a31008",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "047719643172",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet"
            },
            "tags_all": {
              "Name": "private_subnet"
            },
            "vpc_id": "vpc-000b6a43f790e2f2c"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:047719643172:subnet/subnet-0634ea02bd4a50822",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0634ea02bd4a50822",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "047719643172",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet"
            },
            "tags_all": {
              "Name": "public_subnet"
            },
            "vpc_id": "vpc-000b6a43f790e2f2c"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:047719643172:subnet/subnet-06fda999af8f33c34",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06fda999af8f33c34",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "047719643172",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet"
            },
            "tags_all": {
              "Name": "public_subnet"
            },
            "vpc_id": "vpc-000b6a43f790e2f2c"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:047719643172:vpc/vpc-000b6a43f790e2f2c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-033aadc073b1a6a42",
            "default_route_table_id": "rtb-01b26cd2f0a8c9bf9",
            "default_security_group_id": "sg-0fc179ea6485f4215",
            "dhcp_options_id": "dopt-0af72db82d95f54c5",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-000b6a43f790e2f2c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01b26cd2f0a8c9bf9",
            "owner_id": "047719643172",
            "tags": {
              "Name": "My_VPC_Terraform"
            },
            "tags_all": {
              "Name": "My_VPC_Terraform"
            }
          }
        }
      ]
    }
  ]
}